fixes tooltip invoking behind search

--- a/app/components/tool-pallete/toolpallete.element.css
+++ b/app/components/tool-pallete/toolpallete.element.css
@@ -121,7 +121,7 @@
 }
 
 :host li[data-tool="search"] {
-  &[data-active="true"]:after {
+  &[data-active="true"]:before {
     display: none;
   }
 }
